--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-J2V8 OSGi Bundles
+<html>
+<body>
+This URL is an Eclipse software repository; you must use it in Eclipse
+(<a href="http://help.eclipse.org/mars/index.jsp?topic=/org.eclipse.platform.doc.user/tasks/tasks-127.htm")>see how</a>).
+<br>
+This repository contains the OSGi bundles for J2V8.
+</body>
+</html>
